third_party/WebKit/Source/WebCore/rendering/RenderLayerBacking.cpp
@@ -566,7 +566,7 @@ bool RenderLayerBacking::updateClippingLayers(bool needsAncestorClip, bool needs
 
 bool RenderLayerBacking::requiresHorizontalScrollbarLayer() const
 {
-#if PLATFORM(MAC)
+#if !PLATFORM(CHROMIUM)
     if (!m_owningLayer->hasOverlayScrollbars())
         return false;
 #endif
@@ -575,7 +575,7 @@ bool RenderLayerBacking::requiresHorizontalScrollbarLayer() const
 
 bool RenderLayerBacking::requiresVerticalScrollbarLayer() const
 {
-#if PLATFORM(MAC)
+#if !PLATFORM(CHROMIUM)
     if (!m_owningLayer->hasOverlayScrollbars())
         return false;
 #endif
@@ -584,7 +584,7 @@ bool RenderLayerBacking::requiresVerticalScrollbarLayer() const
 
 bool RenderLayerBacking::requiresScrollCornerLayer() const
 {
-#if PLATFORM(MAC)
+#if !PLATFORM(CHROMIUM)
     if (!m_owningLayer->hasOverlayScrollbars())
         return false;
 #endif
