third_party/WebKit/Source/WebCore/rendering/RenderLayerCompositor.cpp
@@ -1467,7 +1467,7 @@ static bool shouldCompositeOverflowControls(ScrollView* view)
 {
     if (view->platformWidget())
         return false;
-#if PLATFORM(MAC)
+#if !PLATFORM(CHROMIUM)
     if (!view->hasOverlayScrollbars())
         return false;
 #endif
